opam-version: "2.0"
maintainer: "maintenance@identity-function.com"
authors: ["Mindy Preston"]
homepage: "https://github.com/yomimono/ppx_deriving_crowbar"
bug-reports: "https://github.com/yomimono/ppx_deriving_crowbar/issues"
dev-repo: "git+https://github.com/yomimono/ppx_deriving_crowbar.git"
license: "MIT"
build: [
  ["dune" "subst"] {pinned}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {build & >= "1.3.0"}
  "ppxfind" {build}
  "ppx_deriving" {>= "4.1.5" }
  "ppx_tools"
  "crowbar"
]
synopsis: "Ppx_deriving plugin for crowbar generators"
