(library
 (public_name ppx_deriving_crowbar)
 (modules ppx_deriving_crowbar)
 (synopsis "[@@deriving crowbar]")
 (kind ppx_deriver)
 (libraries ppxlib)
 (preprocess (pps ppxlib.metaquot))
 ;(ppx_runtime_libraries ppx_deriving_crowbar.runtime)
)

;(library
 ;(name ppx_deriving_crowbar_runtime)
 ;(public_name ppx_deriving_crowbar.runtime)
 ;(synopsis "Runtime components of [@@deriving crowbar]")
 ;(modules ppx_deriving_crowbar_runtime)
 ;(libraries ppx_deriving.runtime)
;)
